# continuo

./: .gitignore  AGENTS.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  LICENSE_FAQ.md  README.md  RELEASE.md  SECURITY.md  pyproject.toml  wrangler.toml
.github/workflows/: memory-cycle.yml  test.yml
.wrangler/cache/: wrangler-account.json
BENCHMARKS/: latency_matrix.md
adapters/: __init__.py  _cursor_sqlite.py  base.py  cascade.py  claude_code.py  codex.py  copilot.py  cursor.py  llama_cpp_backend.py
cli/: __init__.py  dogfood.py  main.py
core/: __init__.py  codex_context.py  codex_fixtures.py  inference_protocol.py  l2.py  l2_config.yaml  l5_io.py  l6_remote.py  l6_server.py  l6_store.py  orchestrator.py  recognition_runtime.py
core/l0/: hot_cache.yaml
core/l1/: Bourdon.md  Clyde.md  Continuo.md  ILTT.md  Ryan.md
docs/: AUTHORING_AN_ADAPTER.md  PROOF.md  agent-integration-status.md  cursor-alignment-spike.md  getting-started-memory-cycle.md  good-first-issues.md
docs/integrations/: claude-desktop.md  codex.md  cursor.md  openmanus.md
scripts/: bootstrap-bourdon-mcp.ps1  bootstrap-continuo-mcp.ps1  build_bourdon_l5.py  build_continuo_l5.py  doctor.ps1  doctor.py  launch.py  mcp_smoke_test.py  migrate_short_index.py  regression_matrix.ps1  regression_matrix.py  run_memory_cycle.ps1  validate_short_index.py
spec/: ADAPTER_CONTRACT.md  ARCHITECTURE_v0.1.md  FINDINGS_JOURNAL.md  L5_schema.json  POSITIONING.md  README.md  RELATED_WORK.md  THESIS.md  USE_CASES.md
spec/launch_drafts/: LAUNCH_CHECKLIST.md  hn_show.md  twitter_thread.md
starter-template/: README.md  short-index.example.json
tests/: conftest.py  test_adapter_base.py  test_cascade_adapter.py  test_claude_code_adapter.py  test_cli.py  test_cli_dogfood.py  test_codex_adapter.py  test_codex_sync_native_federation.py  test_copilot_adapter.py  test_cursor_adapter.py  test_docs.py  test_federation_roundtrip.py  test_inference_protocol.py  test_l2.py  test_l5_io.py  test_l6_server.py  test_l6_store.py  test_l6_store_federation.py  test_llama_cpp_backend.py  test_mcp_smoke_test.py  test_orchestrator.py  test_recognition_runtime.py  test_short_index_guardrails.py
tests/fixtures/short-index/alias_collision/: meta.json  workspace-short-index.json
tests/fixtures/short-index/bad_date_format/: meta.json  workspace-short-index.json
tests/fixtures/short-index/canonical_valid/: meta.json  workspace-short-index.json
tests/fixtures/short-index/duplicate_topic_key/: meta.json  workspace-short-index.json
tests/fixtures/short-index/legacy_topics_aliases_access/: meta.json  workspace-short-index.json
tests/integration/: test_llama_cpp_live.py
web/: index.html  style.css
(+5 files in other folders)
